<resources>

<!--    Listing 5-14 -->
    <string name="app_name">A11y Box</string>
    <string name="content_description_intro">Content Descriptions add an accessible text value to a control where the control either doesn\'t have a label, or the label doesn\'t work for accessibility.</string>
    <string name="content_description_button_title">Go</string>
    <string name="content_description_button_content_description">Submit</string>
    <string name="content_description_title">Content Description</string>
    <string name="content_description_example">The buttons below have the content description of Submit.</string>
    <string name="important_intro">Elements can be set as not important for accessibility to hide them from assistive technologies.</string>
    <string name="important_example">The buttons below aren\'t visible to TalkBack.</string>
    <string name="important_button_title">Go</string>
    <string name="important_for_accessibility_title">Important For Accessibility</string>
    <string name="hint_button">Send</string>
    <string name="hint_button_hint">Sends your message.</string>
    <string name="hint_intro">Hints add extra context to a control.</string>
    <string name="hint_title">Hint</string>
    <string name="heading_title">Heading</string>
    <string name="heading_intro">Headings let TalkBack customers quickly skip blocks of content.</string>
    <string name="heading_heading">This is a heading</string>
    <string name="minimum_size_title">Minimum Size</string>
    <string name="minimum_size_button_description">Close</string>
    <string name="minimum_size_example">The bottom button has no minimum size set.</string>
    <string name="minimum_size_intro">Minimum size lets you ensure your controls will always be large enough to tap.</string>
    <string name="label_for_intro">Label For lets us tie a label to a control. TalkBack will read this label when focused on the control for greater context.</string>
    <string name="label_for_name">Name</string>
    <string name="label_for_email">Email</string>
    <string name="label_for_button">Label For</string>
    <string name="traversal_button_1">Button 1</string>
    <string name="traversal_button_2">Button 2</string>
    <string name="traversal_button_3">Button 3</string>
    <string name="traversal_button_4">Button 4</string>
    <string name="traversal_button_5">Button 5</string>
    <string name="traversal_button_6">Button 6</string>
    <string name="traversal_order_title">Traversal Order</string>
    <string name="keyboard_focus_order">Keyboard Focus Order</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_15">15</string>
    <string name="_14">14</string>
    <string name="_13">13</string>
    <string name="_12">12</string>
    <string name="_11">11</string>
    <string name="_10">10</string>
    <string name="order_set_in_code">Order set in code</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="order_set_in_xml">Order set in XML</string>
    <string name="accessibility_enabled">Accessibility services are currently enabled.</string>
    <string name="accessibility_disabled">Accessibility services are currently disabled.</string>
    <string name="explore_by_touch_enabled">Explore by touch is currently enabled.</string>
    <string name="explore_by_touch_disabled">Explore by touch is currently disabled.</string>
    <string name="none">none</string>
    <string name="semantic_view_title">Semantic view</string>
    <string name="accessibility_services_title">Accessibility Services</string>
    <string name="live_region_title">Live Region</string>
    <string name="press_for_an_announcement">Press for an announcement</string>
    <string name="another_way_of_informing_you_user_of_content_changes_without_changing_focus_is_using_an_announcement">Another way of informing you user of content changes without changing focus is using an announcement.</string>
    <string name="press_to_change_the_score">Press to change the score</string>
    <string name="live_regions_are_areas_of_the_screen_that_are_announced_by_talkback_whenever_the_content_changes_without_affecting_focus">Live regions are areas of the screen that are announced by TalkBack whenever the content changes, without affecting focus.</string>
    <string name="score_0_points">Score: 0 points</string>
    <string name="animations_enabled">Animations are currently enabled.</string>
    <string name="animations_disabled">Animations are currently disabled.</string>
    <string name="remove_animations_title">Remove animations</string>
    <string name="captions_are_supported_natively_with_videoview_elements_just_provide_a_subtitles_file_for_other_voice_audio_you_should_listen_to_the_user_s_settings_for_how_and_when_to_display_captions">Captions are supported natively with VideoView elements, just provide a subtitles file. For other voice audio you should listen to the user\'s settings for how and when to display captions.</string>
    <string name="captions_enabled">Captions are currently enabled.</string>
    <string name="captions_disabled">Captions are currently enabled.</string>

</resources>
